# fdc_catamaps

./: .buildinfo  .travis.yml  LICENSE  README.md  TODO.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  todo.html
.doctrees/: environment.pickle  index.doctree  todo.doctree
.github/workflows/: main.yml
_modules/: index.html
_modules/catamap/: diff_svg.html  map_to_meshes.html  svg_to_mesh.html
_modules/catamap/altitude/: bdalti.html
_sources/: index.rst.txt  todo.rst.txt
_static/example_3d/: OrbitControls2.js  download.sh
_static/example_3d/compass/: belt.mtl  down.obj.minf  north.mtl  semi.obj.minf  sphere.mtl  sphere.obj.minf  up.obj.minf
_static/example_3d/meshes_obj/: catflaps_sup_public_accessible_1_tri.obj.minf  colim_sup_public_accessible.aobj  corridors_inf_public_accessible_ceil_line.mtl  corridors_inf_public_accessible_floor_tri.mtl  corridors_inf_public_accessible_floor_tri.obj.minf  corridors_inf_public_accessible_line.mtl  corridors_inf_public_accessible_wall_tri.mtl  corridors_sup_public_accessible_line.mtl  (+29 more)
catamap_web/: OrbitControls2.js  catamap.css  catamap.webmanifest  catamap_webmanifest.json  download.sh  help.html  index.html  sw.js
doc/source/: conf.py  index.rst  todo.rst
python/: map_to_meshes.py
python/altitude/: filt_intens.py  geoportail.txt
python/catamap/: __main__.py  build_version.py  diff_svg.py  gdalcopyproj.py  info.py  map_to_meshes.py  missing_media.py  scale_georef.py  svg_to_mesh.py
python/catamap_serv/: build_compass.py
util/: replace_slash.sh
(+52 files in other folders)
