[project]
name = "fdc_catamaps"
version = "1.0.0"
authors = [
    {name = "denisri", email = "nudz@free.fr"},
]
description = "Process SVG Inkscape maps to produce 2D/3D catacombs maps (Fond-du-crew maps)."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "CeCILL-B"}
classifiers = [
    "Intended Audience :: Users",
    "License :: OSI Approved",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: HTML",
    "Programming Language :: Javascript",
    "Natural Language :: English",
    "Topic :: Maps",
]

dependencies = [
    "numpy",
    "scipy",
    "pillow",
]

[project.optional-dependencies]
doc = [
    "sphinx >=1.0",
]

[project.urls]
homepage = "https://denisri.github.io/fdc_catamaps/"
repository = "https://github.com/denisri/fdc_catamaps"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["python"]
